fix contact info alignment and refactor

--- a/frontend/src/components/UserDetail/userDetail.module.css
+++ b/frontend/src/components/UserDetail/userDetail.module.css
@@ -72,7 +72,12 @@
   height: auto;
 }
 
-.contactInfoContainer {
+.riderContactInfo {
+  border-top: 0.1rem solid rgba(0, 0, 0, 0.15);
+  padding-top: 1.75rem;
+}
+
+.contactInfoContainer, .riderContactInfo {
   display: flex;
   flex-direction: row;
   width: 100%;
